@@ -6,6 +6,8 @@ prefix = @PREFIX@
 server_dir = @SERVER_DIR@
 curl_bin = @CURL_BIN@
 test_dir = @TEST_DIR@
+nghttp = @NGHTTP@
+h2load = @H2LOAD@
 
 [httpd]
 http_port = @HTTP_PORT@
